add controller toggleTheme and write docs for swagger
